Added some basic security and error handling